--- a/index.html
+++ b/index.html
@@ -92,35 +92,35 @@
     /* Styles for the Glowing Loader Ring */
     .ring {
       position: relative;
-      width: 112px; /* UPDATED: Increased size to contain the 6px border (100 + 2*6) */
-      height: 112px; /* UPDATED: Increased size to contain the 6px border (100 + 2*6) */
+      width: 100px;
+      height: 100px;
       border: 0px solid #000;
       border-radius: 50%;
       text-align: center;
-      line-height: 112px; /* UPDATED: Aligned with new height */
-      font-size: 11px; /* UPDATED: Slightly increased font size */
+      line-height: 100px;
+      font-size: 10px;
       color: #87BD72;
       text-shadow: 0 0 10px #87BD72;
       box-shadow: 0 0 20px rgba(135, 189, 114, 0.5);
-      overflow: hidden; /* Kept to ensure content inside stays within bounds if needed */
+      overflow: hidden;
       display: flex;
       align-items: center;
       justify-content: center;
       white-space: nowrap;
       order: -1; /* Ensures ring appears above the image in flex column */
-      margin-bottom: 50px; /* UPDATED: Space between ring and logo */
+      margin-bottom: 50px;
     }
 
     .ring:before {
       content: '';
       position: absolute;
-      top: -6px; /* UPDATED: Adjusted to match new border thickness */
-      left: -6px; /* UPDATED: Adjusted to match new border thickness */
+      top: -3px;
+      left: -3px;
       width: 100%;
       height: 100%;
-      border: 6px solid transparent; /* Thicker border */
-      border-top: 6px solid #87BD72; /* Thicker border */
-      border-right: 6px solid #87BD72; /* Thicker border */
+      border: 3px solid transparent;
+      border-top: 3px solid #87BD72;
+      border-right: 3px solid #87BD72;
       border-radius: 50%;
       animation: animateC 2s linear infinite;
     }
@@ -396,10 +396,12 @@
       display: flex;
       gap: 12px;
       flex-wrap: nowrap;
+      margin-top: 20px; /* Pushed buttons down */
+      margin-bottom: 10px;
     }
 
     .btn {
-      padding: 10px 18px;
+      padding: 15px 22px; /* Increased padding for larger button */
       text-decoration: none;
       border-radius: 5px;
       text-align: center;
@@ -407,6 +409,10 @@
       font-weight: 700;
       white-space: nowrap;
       transition: background-color 0.5s ease, color 0.5s ease;
+      display: flex; /* Ensure content is centered */
+      align-items: center;
+      justify-content: center;
+      min-width: 120px; /* Set a minimum width for the button */
     }
 
     a.btn.view-btn {
@@ -560,23 +566,25 @@
     /* Media Queries for Responsiveness */
     @media (max-width: 600px) {
       .file-entry {
-        flex-direction: row;
-        align-items: flex-start;
-        text-align: left;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
       }
       .file-entry img {
-        margin-bottom: 0;
+        margin-bottom: 15px;
       }
       .buttons {
-        justify-content: flex-start;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        gap: 12px;
+        justify-content: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 10px;
+        margin-top: 20px; /* Pushed buttons down */
+        margin-bottom: 10px;
       }
       .btn {
         min-width: unset;
-        flex-grow: 0;
-        flex-basis: auto;
+        flex-grow: 1;
+        flex-basis: 100%;
       }
 
       /* Mobile Nav specific styles */
@@ -849,7 +857,7 @@
           } else {
               body.classList.remove('menu');
               menu.style.transform = 'translateX(-100%)'; // Hide menu
-              mobileMenuOverlay.style.display = 'none'; // Hide overlay
+              mobileMenuOverlay.style.display = 'none';
           }
       });
 
