--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
     #loader img {
       width: 300px;
       max-width: 80%;
-      /* Removed margin-top: 50px as the ring's margin-bottom will handle spacing from the ring */
-      margin-bottom: 0; /* Ensures no extra space below the logo image itself */
+      margin-bottom: 50px;
       animation: pulse 1.5s infinite ease-in-out;
     }
 
@@ -92,13 +91,13 @@
     /* Styles for the Glowing Loader Ring */
     .ring {
       position: relative;
-      width: 100px;
-      height: 100px;
+      width: 100px; /* UPDATED: Half size */
+      height: 100px; /* UPDATED: Half size */
       border: 0px solid #000;
       border-radius: 50%;
       text-align: center;
-      line-height: 100px;
-      font-size: 10px;
+      line-height: 100px; /* UPDATED: Half size */
+      font-size: 10px; /* UPDATED: Half size */
       color: #87BD72;
       text-shadow: 0 0 10px #87BD72;
       box-shadow: 0 0 20px rgba(135, 189, 114, 0.5);
@@ -107,20 +106,18 @@
       align-items: center;
       justify-content: center;
       white-space: nowrap;
-      order: -1; /* Ensures ring appears above the image in flex column */
-      margin-bottom: 50px;
     }
 
     .ring:before {
       content: '';
       position: absolute;
-      top: -3px;
-      left: -3px;
+      top: -1.5px; /* UPDATED: Half size */
+      left: -1.5px; /* UPDATED: Half size */
       width: 100%;
       height: 100%;
-      border: 3px solid transparent;
-      border-top: 3px solid #87BD72;
-      border-right: 3px solid #87BD72;
+      border: 2px solid transparent; /* UPDATED: Adjusted border thickness */
+      border-top: 2px solid #87BD72; /* UPDATED: Adjusted border thickness */
+      border-right: 2px solid #87BD72; /* UPDATED: Adjusted border thickness */
       border-radius: 50%;
       animation: animateC 2s linear infinite;
     }
@@ -128,10 +125,10 @@
     .ring span {
       display: block;
       position: absolute;
-      top: calc(50% - 1px);
+      top: calc(50% - 1px); /* UPDATED: Half size */
       left: 50%;
       width: 50%;
-      height: 2px;
+      height: 2px; /* UPDATED: Half size */
       background: transparent;
       transform-origin: left;
       animation: animate 2s linear infinite;
@@ -140,10 +137,10 @@
     .ring span:before {
       content: '';
       position: absolute;
-      top: -3px;
+      top: -3px; /* UPDATED: Half size */
       right: 0;
-      width: 8px;
-      height: 8px;
+      width: 8px; /* UPDATED: Half size */
+      height: 8px; /* UPDATED: Half size */
       border-radius: 50%;
       background: #87BD72;
       box-shadow: 0 0 20px #87BD72;
@@ -185,18 +182,18 @@
     }
 
     .header-nav .logo img {
-      max-width: 125px; /* UPDATED: Slightly larger logo */
+      max-width: 110px;
       height: auto;
       display: block;
       padding: 0;
-      margin-top: 0; /* Ensures no unexpected top margin */
+      padding-top: 10;
     }
 
     .header-nav .tagline {
       font-family: 'Urbanist', sans-serif;
       font-weight: 800;
       text-transform: uppercase;
-      color: rgba(135, 189, 114, 0.9); /* Green color with 90% opacity */
+      color: #587F53;
       font-size: 16px;
       margin-left: 25px;
       white-space: nowrap;
@@ -205,7 +202,6 @@
     .logo-and-tagline {
       display: flex;
       align-items: center;
-      padding-top: 0; /* Ensures no unexpected padding here */
     }
 
     /* Menu Button Styles (Hamburger) */
@@ -312,21 +308,24 @@
       justify-content: center;
       align-items: center;
       min-height: 220px;
-      margin-bottom: 0;
     }
 
     header img {
-      display: block;
-      width: 45%;
-      max-width: 400px;
-      height: auto;
-      padding: 12px;
-      box-sizing: border-box;
-      margin: 0 auto 15px auto;
+      display: none;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      font-family: 'Urbanist', sans-serif;
+      font-weight: 800;
+      color: #B8BAB7;
     }
 
     h1 {
-      display: none;
+      text-align: center;
+      font-size: 19px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      margin-bottom: 15px;
     }
 
     .intro-text {
@@ -396,12 +395,10 @@
       display: flex;
       gap: 12px;
       flex-wrap: nowrap;
-      margin-top: 20px; /* Pushed buttons down */
-      margin-bottom: 10px;
     }
 
     .btn {
-      padding: 15px 22px; /* Increased padding for larger button */
+      padding: 10px 18px;
       text-decoration: none;
       border-radius: 5px;
       text-align: center;
@@ -409,10 +406,6 @@
       font-weight: 700;
       white-space: nowrap;
       transition: background-color 0.5s ease, color 0.5s ease;
-      display: flex; /* Ensure content is centered */
-      align-items: center;
-      justify-content: center;
-      min-width: 120px; /* Set a minimum width for the button */
     }
 
     a.btn.view-btn {
@@ -566,25 +559,23 @@
     /* Media Queries for Responsiveness */
     @media (max-width: 600px) {
       .file-entry {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
+        flex-direction: row;
+        align-items: flex-start;
+        text-align: left;
       }
       .file-entry img {
-        margin-bottom: 15px;
+        margin-bottom: 0;
       }
       .buttons {
-        justify-content: center;
-        flex-direction: column;
-        flex-wrap: wrap;
-        gap: 10px;
-        margin-top: 20px; /* Pushed buttons down */
-        margin-bottom: 10px;
+        justify-content: flex-start;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        gap: 12px;
       }
       .btn {
         min-width: unset;
-        flex-grow: 1;
-        flex-basis: 100%;
+        flex-grow: 0;
+        flex-basis: auto;
       }
 
       /* Mobile Nav specific styles */
@@ -661,11 +652,11 @@
 <body>
 
   <div id="loader">
+    <img src="tagline.png" alt="Burn the Mask. Speak the Truth." />
     <div class="ring">
       Loading
       <span></span>
     </div>
-    <img src="tagline.png" alt="Burn the Mask. Speak the Truth." />
   </div>
 
   <nav class="header-nav">
@@ -687,8 +678,7 @@
 
   <div class="mobile-menu-overlay"></div>
 
-  <header>
-    <img src="download-center-heading.png" alt="Download Center" />
+  <header> <h1>Download Center</h1>
     <p class="intro-text">
       Welcome to the official Download Center for Daren Prince. This is your one stop hub for press kits, brand assets, media releases, and exclusive bonus content available to VIP subscribers and media professionals.
     </p>
@@ -857,7 +847,7 @@
           } else {
               body.classList.remove('menu');
               menu.style.transform = 'translateX(-100%)'; // Hide menu
-              mobileMenuOverlay.style.display = 'none';
+              mobileMenuOverlay.style.display = 'none'; // Hide overlay
           }
       });
 
