--- a/index.html
+++ b/index.html
@@ -736,21 +736,9 @@
                         Get exclusive updates, content & early access direct from author Daren Prince.
                     </p>
                     <form action="mailto:press@darenprince.com" method="POST" enctype="text/plain" style="display: flex; flex-wrap: nowrap; align-items: center; gap: 10px;">
-                        <input
-                          type="email"
-                          name="email"
-                          placeholder="Email address"
-                          aria-label="Your email address"
-                          style="padding: 12px; flex: 1 1 auto; border: none; border-radius: 4px; background-color: #2A2A2A; color: #FDFDFD;"
-                          required
-                        />
-                        <button
-                          type="submit"
-                          style="padding: 12px 16px; background-color: #456F3A; border: none; color: white; border-radius: 4px; white-space: nowrap; margin-top: 6px;"
-                        >
-                          Join →
-                        </button>
-                    </form>
+  <input type="email" name="email" placeholder="Email address" aria-label="Your email address" style="..." required />
+  <button type="submit" style="...">Join →</button>
+</form>
                 </div>
 
                 <div style="flex: 1 1 280px;">
