--- a/index.html
+++ b/index.html
@@ -290,6 +290,24 @@
       transform: translateX(0);
     }
 
+    .mobile-menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  z-index: 10;
+}
+
+body.menu-open .mobile-menu-overlay {
+  opacity: 1;
+  visibility: visible;
+}
+
     .menu li a {
       display: block;
       padding: 18px 20px;
